--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
-  url_launcher: ^6.2.5  # Add this line
+  url_launcher: ^6.2.5
+  geolocator: ^10.1.0
+  geocoding: ^2.2.0
 
 dev_dependencies:
   flutter_test:
