--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.2.5
   geolocator: ^10.1.0
   geocoding: ^2.2.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
